# AERA

./: .gitignore  .gitmodules  AERA.sln  CHANGELOG.md  CMakeLists.txt  Doxyfile  INSTALL.md  License.txt  README.md  Replicode.sln
AERA/: AERA.vcxproj  AERA.vcxproj.filters  AERA_main.cpp  NatvisFile.natvis  main.cpp  main.h  settings.h  settings.xml  test_mem.cpp  test_mem.h
CorrelatorTest/: CorrelatorTest.cpp  CorrelatorTest.vcxproj  correlator.h  settings.h
Test/: AERA.vcxproj  AERA.vcxproj.filters  Test.cpp  Test.vcxproj  Test.vcxproj.filters  helgi.replicode  settings.h  settings.xml  test.1.2011-04-13.v1_0.replicode  test_mem.cpp  test_mem.h  user.classes.2011-04-13.v1_0.replicode
doc/: Doxyfile  ReplicodeSoftwareDesign.v1.2.odt  meeting-notes.txt
html/: __context_8cpp_source.html  __context_8h_source.html  _a_e_r_a_2_i_o_devices_2_t_c_p_2_a_e_r_a___protobuf_2utils_8h_source.html  _a_e_r_a_2_i_o_devices_2_t_c_p_2_proto_2utils_8h_source.html  _a_e_r_a_2main_8cpp_source.html  _a_e_r_a_2settings_8h_source.html  _a_e_r_a__main_8cpp_source.html  _correlator_core_8cpp_source.html  _correlator_core_8h_source.html  _correlator_test_2correlator_8h_source.html  _correlator_test_2settings_8h_source.html  _correlator_test_8cpp_source.html  _forward_layer_8cpp_source.html  _forward_layer_8h_source.html  _lstm_block_8cpp_source.html  _lstm_block_8h_source.html  _lstm_layer_8cpp_source.html  _lstm_layer_8h_source.html  _lstm_network_8cpp_source.html  _lstm_network_8h_source.html  _vector_math_8h_source.html  aera__hand__robot__controller_8cpp_source.html  annotated.html  ast__controller_8cpp_source.html  ast__controller_8h_source.html  ast__controller_8tpl_8cpp_source.html  atom_8cpp_source.html  atom_8h_source.html  atom_8inline_8cpp_source.html  auto__focus_8cpp_source.html  auto__focus_8h_source.html  auto__focus__callback_8cpp_source.html  auto__focus__callback_8h_source.html  base_8cpp_source.html  base_8h_source.html  base_8tpl_8cpp_source.html  binding__map_8cpp_source.html  binding__map_8h_source.html  class_8cpp_source.html  class_8h_source.html  (+764 more)
output_window/: main.cpp  output_window.vcxproj
r_code/: atom.cpp  atom.h  atom.inline.cpp  code_utils.cpp  image.cpp  image.h  image.tpl.cpp  image_impl.cpp  image_impl.h  list.h  object.cpp  object.h  r_code.cpp  r_code.h  r_code.vcxproj  replicode_defs.h  resized_vector.h  utils.h  (+4 more)
(+289 files in other folders)
